@@ -4,10 +4,10 @@
 	<author>Joomla!</author>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<copyright>(C) 2010 - 2011 Open Source Matters. All rights reserved</copyright>
+	<copyright>(C) 2005 - 2011 Open Source Matters. All rights reserved</copyright>
 	<license>GNU General Public License version 2 or later; see     LICENSE.txt</license>
-	<version>1.6.3</version>
-	<creationDate>April 2011</creationDate>
+	<version>1.7.0</version>
+	<creationDate>July 2011</creationDate>
 	<description>FILES_JOOMLA_XML_DESCRIPTION</description>
 
 	<fileset>
@@ -26,6 +26,7 @@
 			<folder>templates</folder>
 			<folder>tmp</folder>
 			<file>htaccess.txt</file>
+			<file>web.config.txt</file>
 			<file>LICENSE.txt</file>
 			<file>README.txt</file>
 			<file>index.php</file>
