@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+18-Jun-2011 Jean-Marie Simonet
+ [#26179] Joomla 1.7.0 find updates and proposes 1.6.3. Thanks Christophe
+
 17-Jun-2011 Mark Dexter
  # [#26124] Namespace the checkAll() function
 
